# nvault-engine

./: Cargo.toml  README.md  demo.vlt  demo2.vlt  thesis.md  v0.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/vault-compression/: Cargo.toml
crates/vault-compression/src/: lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: lib.rs
crates/vault-core/tests/: integration.rs
crates/vault-crypto/: Cargo.toml
crates/vault-crypto/src/: lib.rs
crates/vault-index/: Cargo.toml
crates/vault-index/src/: lib.rs
crates/vault-search/: Cargo.toml
crates/vault-search/src/: lib.rs
crates/vault-storage/: Cargo.toml
crates/vault-storage/src/: lib.rs
crates/vault-types/: Cargo.toml
crates/vault-types/src/: lib.rs
