[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core  = { path = "../../crates/vault-core" }
vault-types = { path = "../../crates/vault-types" }
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
rpassword   = "7"
zeroize     = "1"
uuid        = { version = "1", features = ["v4"] }
